--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="#" class="nav-logo">Syed Kamran Mustafa</a>
             <ul>
                 <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -56,6 +57,18 @@
             </div>
         </section>
 
+        <section id="projects" class="container">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Cloud-Native Application Migration</h3>
+                <p>Led the transformation of a monolithic desktop application to a modern, cloud-native solution deployed on Amazon EKS. Key responsibilities included architecting and implementing a microservices-based system, resulting in the successful deployment of core services to the EKS cluster. This project honed my expertise in Docker, containerization, Helm, CI/CD automation, and AWS infrastructure.</p>
+            </div>
+            <div class="project">
+                <h3>Automated Local Development Environment for Kubernetes</h3>
+                <p>Developed a script that automates the creation of a local Minikube cluster which mirrors a production EKS environment by fetching versioned application builds from AWS. It features an offline mode, allowing the use of previously fetched service images without an internet connection. For debugging, the script can replace a service container in the local cluster with a connection to a local development server, enabling real-time development and testing.</p>
+            </div>
+        </section>
+
         <section id="contact" class="container">
             <h2>Contact</h2>
             <p>I'm currently open to new opportunities. Feel free to reach out!</p>
@@ -64,7 +77,7 @@
                 <a href="https://github.com/k-mustafa" target="_blank" title="GitHub">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" role="img" aria-label="GitHub icon"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3.3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.3-6.2-10.1-27.8 2.3-57.4 0 0 21.1-6.5 69.1 25.8 20.1-5.6 41.6-8.3 62.2-8.3 20.6 0 42.1 2.8 62.2 8.3 48-32.3 69.1-25.8 69.1-25.8 12.4 29.6 4.6 51.2 2.3 57.4 16 17.6 23.6 31.4 23.6 58.9 0 96.5-58.7 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 389.9 8 244.8 8z"/></svg>
                 </a>
-                <a href="https://www.linkedin.com/in/syed-kamran-mustafa-96529759" target="_blank" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/syed-kamran-mustafa" target="_blank" title="LinkedIn">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" role="img" aria-label="LinkedIn icon"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg>
                 </a>
                 <a href="https://www.youtube.com/@syedkamranmustafa" target="_blank" title="YouTube">
@@ -81,5 +94,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
